--- a/map_ios.html
+++ b/map_ios.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <title>Mapa con Leaflet</title>
+	<!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body, #map {
